--- a/thesis/macros.tex
+++ b/thesis/macros.tex
@@ -63,3 +63,7 @@
 \newcommand{\redund}[1]{\textcolor{black!30!red!100}{\underline{#1}}}
 \newcommand{\greenund}[1]{\textcolor{black!40!green!100}{\underline{#1}}}
 \newcommand{\blueund}[1]{\textcolor{black!30!blue!100}{\underline{#1}}}
+
+% check and cross marks
+\newcommand{\cmark}{\ding{51}}%
+\newcommand{\xmark}{\ding{55}}%
