--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,33 @@
+@article{popel-bojar-2018-training,
+ journal = {The Prague Bulletin of Mathematical Linguistics},
+ title = {{Training Tips for the Transformer Model}},
+ author = {Martin Popel and Ond{\v{r}}ej Bojar},
+ year = {2018},
+ month = {April},
+ volume = {110},
+ pages = {43--70},
+ doi = {10.2478/pralin-2018-0002},
+ issn = {0032-6585},
+ url = {https://ufal.mff.cuni.cz/pbml/110/art-popel-bojar.pdf}
+}
+
+@inproceedings{zhou-etal-2020-understanding,
+  author    = {Chunting Zhou and
+               Jiatao Gu and
+               Graham Neubig},
+  title     = {Understanding Knowledge Distillation in Non-autoregressive Machine
+               Translation},
+  booktitle = {8th International Conference on Learning Representations, {ICLR} 2020,
+               Addis Ababa, Ethiopia, April 26-30, 2020},
+  publisher = {OpenReview.net},
+  year      = {2020},
+  url       = {https://openreview.net/forum?id=BygFVAEKDH},
+  timestamp = {Thu, 07 May 2020 17:11:47 +0200},
+  biburl    = {https://dblp.org/rec/conf/iclr/ZhouGN20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
 @inproceedings{rezende2015variational,
   title={Variational Inference with Normalizing Flows},
   author={Rezende, Danilo and Mohamed, Shakir},
