--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -157,6 +157,7 @@ da-ta-set
 % \newcommand{\R}[2]{#1 \tiny $\pm$ \small #2}
 
 \def\JH#1{{\color{blue}JH: \it #1}}
+\def\ignorecolumn#1\unskip{}
 
 
 \title{Non-Autoregressive Neural Machine Translation}
